# cloud-update

./: .actrc  .bazelrc  .env.test  .gitignore  .gitleaks.toml  .golangci.yml  .goreleaser.yaml  .gosec.json  .prettierignore  .prettierrc  BUILD.bazel  IMPROVEMENTS.md  LICENSE  MODULE.bazel  Makefile  README.md  WORKSPACE  bazel-bin  bazel-cloud-update  bazel-out  bazel-testlogs  deps.bzl  go.mod  go.sum  install.sh  sonar-project.properties  uninstall.sh
.claude/agents/: code-practice-reviewer.md  go-architect-guardian.md  go-performance-optimizer.md  go-quality-enforcer.md  go-security-hardening-agent.md  go-team-coordinator.md  go-telemetry-observability-agent.md  go-test-coverage-guardian.md  godoc-documentation-expert.md  kitsune.md  no-claude-coauthor.md
.githooks/: install.sh  pre-commit  pre-push  uninstall.sh
.github/workflows/: README.md  cache-cleanup.yml  ci.yml  release.yml
docs/: SECURITY.md  SONARCLOUD.md  TESTING.md
scripts/: BUILD.bazel  build-all.sh  e2e_test.sh  install.sh  prepare-e2e.sh  test_distro.sh  test_init_systems.sh  validate-build.sh  validate-quality.sh  webhook-client.sh
src/cmd/cloud-update/: BUILD.bazel  main.go
src/internal/application/handler/: BUILD.bazel  cleanup_test.go  health_handler.go  health_handler_test.go  webhook_handler.go  webhook_handler_error_test.go  webhook_handler_improved.go  webhook_handler_pool.go  webhook_handler_pool_test.go  webhook_handler_test.go  webhook_handler_with_status.go  webhook_handler_with_status_test.go
src/internal/domain/entity/: BUILD.bazel  action.go  action_test.go  job.go  job_test.go
src/internal/domain/service/: BUILD.bazel  action_service.go  action_service_test.go  reboot_error_test.go
src/internal/infrastructure/config/: BUILD.bazel  config.go  config_coverage_test.go  config_test.go  tls.go  tls_coverage_test.go  tls_test.go
src/internal/infrastructure/console/: BUILD.bazel  console.go  console_test.go
src/internal/infrastructure/logger/: BUILD.bazel  additional_test.go  complete_coverage_test.go  fatal_coverage_test.go  final_coverage_test.go  full_coverage_test.go  logger.go  logger_bench_test.go  logger_simple_test.go  logger_test.go  slog_logger.go  slog_logger_test.go  slog_simple_test.go
src/internal/infrastructure/ratelimit/: BUILD.bazel  limiter.go  limiter_cleanup_test.go  limiter_test.go
src/internal/infrastructure/security/: BUILD.bazel  auth.go  auth_test.go  jobid.go  jobid_test.go
src/internal/infrastructure/store/: BUILD.bazel  job_store.go  job_store_getjob_test.go  job_store_test.go
src/internal/infrastructure/system/: BUILD.bazel  command_runner.go  command_runner_test.go  coverage_helper_test.go  executor.go  executor_additional_test.go  executor_coverage_test.go  executor_mock.go  executor_secure.go  executor_secure_test.go  executor_test.go  executor_timeout.go  executor_timeout_test.go
src/internal/infrastructure/telemetry/: otel.go.disabled
src/internal/infrastructure/worker/: BUILD.bazel  context_cancel_test.go  pool.go  pool_test.go
src/internal/setup/: BUILD.bazel  coverage_test.go  detection_test.go  embedded.go  embedded_test.go  enable_service_error_test.go  final_coverage_test.go  helpers.go  helpers_test.go  interfaces.go  interfaces_test.go  mocks_test.go  setup.go  setup_comprehensive_test.go  setup_test.go  uninstall_test.go
src/internal/setup/openrc/: cloud-update
src/internal/setup/systemd/: cloud-update.service
src/internal/setup/sysvinit/: cloud-update
src/internal/version/: BUILD.bazel  version.go  version_test.go
src/scripts/: validate-build.sh
src/test/e2e/: BUILD.bazel  Dockerfile.alpine  Dockerfile.alpine-openrc  Dockerfile.arch  Dockerfile.debian  Dockerfile.debian-sysvinit  Dockerfile.fedora  Dockerfile.fedora-systemd  Dockerfile.opensuse  Dockerfile.rockylinux  Dockerfile.test-runner  Dockerfile.ubuntu  Dockerfile.ubuntu-systemd  docker-compose-init.yml  docker-compose.yml  e2e_test.go  run-e2e-tests.sh  run_parallel.sh  test_distro.sh
src/test/e2e/scripts/: install.sh
