load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "setup",
    srcs = [
        "embedded.go",
        "setup.go",
    ],
    embedsrcs = [
        "openrc/cloud-update",
        "systemd/cloud-update.service",
        "sysvinit/cloud-update",
    ],
    importpath = "github.com/kodflow/cloud-update/src/internal/setup",
    visibility = ["//src:__subpackages__"],
    deps = [
        "//src/internal/infrastructure/console",
        "//src/internal/infrastructure/system",
    ],
)
