load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "setup",
    srcs = [
        "embedded.go",
        "helpers.go",
        "interfaces.go",
        "setup.go",
    ],
    embedsrcs = [
        "openrc/cloud-update",
        "systemd/cloud-update.service",
        "sysvinit/cloud-update",
    ],
    importpath = "github.com/kodflow/cloud-update/src/internal/setup",
    visibility = ["//src:__subpackages__"],
    deps = [
        "//src/internal/infrastructure/console",
        "//src/internal/infrastructure/system",
    ],
)

go_test(
    name = "setup_test",
    srcs = [
        "coverage_test.go",
        "detection_test.go",
        "embedded_test.go",
        "enable_service_error_test.go",
        "final_coverage_test.go",
        "helpers_test.go",
        "interfaces_test.go",
        "mocks_test.go",
        "setup_comprehensive_test.go",
        "setup_test.go",
        "uninstall_test.go",
    ],
    embed = [":setup"],
    size = "small",
    timeout = "short",
    deps = [
        "//src/internal/infrastructure/system",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
