load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "version",
    srcs = ["version.go"],
    importpath = "github.com/kodflow/cloud-update/src/internal/version",
    visibility = ["//src:__subpackages__"],
)

go_test(
    size = "small",
    name = "version_test",
    srcs = ["version_test.go"],
    embed = [":version"],
)
