load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "handler",
    srcs = [
        "health_handler.go",
        "webhook_handler_pool.go",
        "webhook_handler_with_status.go",
    ],
    importpath = "github.com/kodflow/cloud-update/src/internal/application/handler",
    visibility = ["//src:__subpackages__"],
    deps = [
        "//src/internal/domain/entity",
        "//src/internal/domain/service",
        "//src/internal/infrastructure/logger",
        "//src/internal/infrastructure/security",
        "//src/internal/infrastructure/store",
        "//src/internal/infrastructure/worker",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)

go_test(
    size = "small",
    name = "handler_test",
    srcs = [
        "health_handler_test.go",
        "webhook_handler_pool_test.go",
        "webhook_handler_with_status_test.go",
    ],
    embed = [":handler"],
    deps = ["//src/internal/domain/entity"],
)
