load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "config",
    srcs = [
        "config.go",
        "tls.go",
    ],
    importpath = "github.com/kodflow/cloud-update/src/internal/infrastructure/config",
    visibility = ["//src:__subpackages__"],
)

go_test(
    size = "small",
    name = "config_test",
    srcs = ["config_test.go"],
    embed = [":config"],
)
