load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "logger",
    srcs = [
        "logger.go",
        "slog_logger.go",
    ],
    importpath = "github.com/kodflow/cloud-update/src/internal/infrastructure/logger",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_sirupsen_logrus//:logrus",
    ],
)

go_test(
    size = "small",
    name = "logger_test",
    srcs = ["logger_test.go"],
    embed = [":logger"],
    deps = [
        "@com_github_sirupsen_logrus//:logrus",
    ],
)