load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "worker",
    srcs = ["pool.go"],
    importpath = "github.com/kodflow/cloud-update/src/internal/infrastructure/worker",
    visibility = ["//visibility:public"],
    deps = ["//src/internal/infrastructure/logger"],
)

go_test(
    size = "small",
    name = "worker_test",
    srcs = ["pool_test.go"],
    embed = [":worker"],
)